--- a/_i18n/en/_posts/2021-12-10-民主峰會-國家聲明.md
+++ b/_i18n/en/_posts/2021-12-10-民主峰會-國家聲明.md
@@ -1,35 +1,34 @@
 ---
   layout: "post"
-  title: "Democracy Summit: State Statement"
-  excerpt: "Our democracies must trust our citizens and invest in civic infrastructure in the digital field."
+  title: "Summit for Democracy: National Statement"
+  excerpt: "As democracies, we must trust our citizens and invest in public infrastructure in the digital realm."
   image: "/assets/imgs/thumbnail-20211210.jpg"
-  author: "唐鳳"
+  author: "Audrey Tang"
   category: "blog"
   tags: 
-    - "開放政府"
-    - "社會創新"
-    - "青年參與"
+    - "Open Government"
+    - "Social Innovation"
+    - "Youth Engagement"
 ---
 
+Ladies, gentlemen, and non-binary friends: Good local time.
 
-Ladies and gentlemen, and friends with non-binary genders: Good local time! 
+I’m Audrey Tang, Taiwan’s Digital Minister. It’s my honor to represent Taiwan at the Summit for Democracy along with Representative Bí-khîm Hsiao of TECRO, our representative office in the United States.
 
-I am Tang Feng, a number of political commissars in Taiwan, and I am honored to represent Taiwan in the Democracy Summit together with the ambassador to the United States, Xiao Meiqin. 
+Taiwan’s first direct presidential election took place in 1996. It was a heady accomplishment in a steady journey of democratization throughout the decade. By 2014, Taiwan’s democracy had matured to the point where the peaceful Occupy Parliament movement in 2014 paved the way for political change while unleashing a wave of youthful activism and civic participation in public affairs.
 
-In 1996, after a decade of stable democratization, Taiwan held its first direct presidential election in history. This was an important achievement. By 2014, Taiwan’s democracy had matured, and the peaceful occupation of the National Assembly laid the foundation for subsequent political reforms. At the same time, it also set off a wave of youth actions and citizen participation in politics. 
+Although Taiwan is a young democracy, it’s standing firm on the front lines of the global struggle with authoritarianism. It also plays a leading role in advancing freedom, democracy, and human rights worldwide. 
 
-As Taiwan’s democracy is in the ascendant, we have always stood firmly at the forefront of the global fight against authoritarianism, and we have also played a leading role in promoting global freedom, democracy and human rights. 
+During COVID-19, we’ve seen signs of democracy backsliding as authoritarian regimes justify human right violations in the name of public health and the greater good. For Taiwan, we combat the pandemic with no lockdowns and the infodemic with no takedowns.
 
-During the epidemic, authoritarian governments everywhere rationalized human rights violations in the name of public health and collective interests, and global democracy showed signs of regression. However, in Taiwan, we can control the epidemic without shutting down the city, and we can defeat false messages without taking off the shelves. 
+Democracy in Taiwan isn’t just for the people but with the people. Effective counter-pandemic measures, including the mask distribution system and SMS-based contact tracing system, began as civic technologies from the social sector. They were amplified by governments and businesses working hand in hand. This people-public-private partnership is a model we’re proud to share.
 
-For Taiwan, democracy is not only "entrusted by the people," but also "in cooperation with the people." Taiwan’s effective anti-epidemic measures, including mask distribution and newsletters, are all developed by civil society first, and then the government and enterprises will work together to increase the rate. This "citizen, government, and private sector" partnership is a model we are proud of and want to share with you. 
+For example, the government supports the stationing of international journalists and NGOs in Taiwan. Over the last two years, Taiwan has accredited 50-plus foreign journalists, including correspondents of U.S.-based media outlets who were forced to leave under pressure from Beijing. The government also welcomes NGOs to establish presences in Taiwan. Some of the recent high-profiles arrivals are U.S.-based National Democratic Institute and International Republican Institute.
 
-For example, the Taiwanese government supports international media and non-governmental organizations to station in Taiwan. In the past two years, it has assisted more than 50 foreign journalists to come to Taiwan, including American media who were forced to leave under pressure from Beijing. We also welcome non-governmental organizations to set up offices in Taiwan. Recently, high-profile organizations that have come to Taiwan to set up sites include the "International Democracy Association" and the "International Republic Institute" headquartered in the United States. 
+In answering the call made by the United States, Taiwan has pledged financial support for Global Anti-Corruption Consortium and is willing and able to contribute to the International Fund for Public Interest Media. Both multilateral initiatives focus on combating corruption and mis- and disinformation, respectively, and are in line with the goals of this summit.
 
-Taiwan has responded to the call of the United States, pledged to fund the "Global Anti-Corruption Group", and has the willingness and ability to contribute to the "Public Media International Fund." The two multilateral initiatives focused on anti-corruption and countering false information, respectively, are in line with the goals of this summit. 
+A central plank in efforts to achieve these goals is the Global Cooperation and Training Framework. Via the GCTF, Taiwan works with the United States, Japan, Australia, and other like-minded countries in organizing workshops on critically important international issues like anti-corruption, media literacy, and women’s empowerment. #StrongerTogether, in this case, is more than a social media hashtag, it’s the very essence of the free world’s unshakeable belief that democracy can deliver.
 
-Taiwan will work hard to fulfill our promise through the "Global Cooperation and Training Framework (GCTF)". Under this structure, Taiwan and countries with similar ideas, such as the United States, Japan, and Australia, jointly hold workshops on important international issues such as anti-corruption, media literacy, and women's empowerment. It is shown that #StrongerTogether is not only a social media label, but also the unshakable nature of belief in the free world, that is, democracy can fulfill its promises. 
+“To give no trust is to get no trust.” As democracies, we must trust our citizens and invest in public infrastructure in the digital realm. This is the best and only way to protect and advance our shared values. Today’s summit is the perfect platform to bring democracies together and explore ways to collaborate. I look forward to discussions with you all. 
 
- "I don't believe in enough, but I don't believe it." Our democracies must trust our citizens and invest in civic infrastructure in the digital field. This is the best and the only way to protect and promote our shared value. Today's summit is a perfect platform for democracies from all over the world to come together to explore ways of cooperation. I look forward to exchanging opinions with you all. 
-
-Thank you all. I wish endless prosperity and prosperity. 
+Thank you. Live long and prosper.
