--- a/_i18n/en/_posts/2021-12-10-民主峰會-國家聲明.md
+++ b/_i18n/en/_posts/2021-12-10-民主峰會-國家聲明.md
@@ -32,3 +32,5 @@ A central plank in efforts to achieve these goals is the Global Cooperation and 
 “To give no trust is to get no trust.” As democracies, we must trust our citizens and invest in public infrastructure in the digital realm. This is the best and only way to protect and advance our shared values. Today’s summit is the perfect platform to bring democracies together and explore ways to collaborate. I look forward to discussions with you all. 
 
 Thank you. Live long and prosper.
+
+<iframe width="560" height="315" src="https://www.youtube.com/embed/ODpuf38n0SU" frameborder="0" allowfullscreen></iframe>
