--- a/_posts/2021-12-10-民主峰會-國家聲明.md
+++ b/_posts/2021-12-10-民主峰會-國家聲明.md
@@ -32,3 +32,5 @@ tags:
  「信不足焉，有不信焉」。我們民主國家，都必須信任我們的公民，並投資於數位領域的公民基礎設施。這是最好，也是唯一能保護與促進我們共享價值的做法。今天的峰會，正是盡善盡美的平台，全球民主國家齊聚一堂、探索合作方式。我很期待和大家交換意見。
 
 謝謝大家。祝生生不息，繁榮昌盛。
+
+<iframe width="560" height="315" src="https://www.youtube.com/embed/ODpuf38n0SU" frameborder="0" allowfullscreen></iframe>
