--- a/_i18n/en/_posts/2021-12-10-民主峰會-以科技肯定民主價值.md
+++ b/_i18n/en/_posts/2021-12-10-民主峰會-以科技肯定民主價值.md
@@ -1,56 +1,57 @@
 ---
   layout: "post"
-  title: "Democracy Summit: Affirm the value of democracy with technology"
+  title: "Summit for Democracy: Affirming Democratic Values with Technology
   excerpt: "Not only need to \"be entrusted by the people,\" but also to \"work with the people.\""
   image: "/assets/imgs/panel-20211210.jpg"
-  author: "唐鳳"
+  author: "Audrey Tang"
   category: "blog"
   tags: 
-    - "開放政府"
-    - "社會創新"
+    - "Open Government"
+    - "Social Innovation""
 ---
 
+Our main message is to work not just "for" the people, but "with" the people.
 
-The main idea I want to convey is not only to &quot;be entrusted by the people,&quot; but to &quot;cooperate with the people.&quot; 
+Every year, the human rights organization CIVICUS, with around 20 regional partners conduct research about freedom and civic space. Taiwan has been rated as “completely open” for three consecutive years. We are the only Asian country with that distinction, and the sole Asian green light on this year’s CIVICUS Monitor.
 
-The human rights organization CIVICUS investigates the global freedom of civil activities with more than 20 regional partners each year. Taiwan has been rated as &quot;fully open&quot; for three consecutive years. On this year&#39;s CIVICUS Monitor, my country is the only one in Asia Green highlights. 
+How did we come so far on the path of democratization? The key factor is that the internet in Taiwan has developed alongside democratization. Between the lifting of martial law in 1987 and the presidential election in ‘96, we saw the popularization of PCs and the World Wide Web in a span of 10 years. For Taiwanese people, democracy is like a social technology—it can only be enriched through the joint efforts of all.
 
-Where did my country&#39;s democratic achievements come from? The key is that the process of Taiwan’s Internet and democracy has developed simultaneously from the beginning. The ten years from the lifting of martial law in 1987 to the first direct presidential election in 1996 were the ten years when personal computers became popular on the World Wide Web. For the people of Taiwan, democracy is like social technology. It must be enriched through the joint efforts of all people. 
+Therefore, our government insists that broadband is a human right. Through digital infrastructure, we reduce the cost for civic technologies. Our network infrastructure allows everyone to broadcast live from Jade Mountain, Taiwan’s highest peak. We believe that a completely open and uncensored environment with free speech is perfect for letting digital democracy flourish.
 
-Therefore, the Chinese government has always insisted on &quot;broadband human rights&quot;: to reduce the cost of citizen technology through digital infrastructure. Our network facilities allow anyone to broadcast live broadcasts even in Yushan, the highest peak in Taiwan. We believe that an open and free speech environment is the soil for digital democracy to blossom and bear fruit. 
+With our 23 million citizens using the Internet as a space for democracy, we have combated the pandemic with no lockdowns and the infodemic with no takedowns. For instance, in late 2019, when news about the pandemic just started, this prosocial social media platform allowed timely response to early warnings.
 
-Because the 23 million people in Taiwan have become accustomed to using the Internet as a public discussion space, we can prevent the epidemic without shutting down the city, and we can verify it without removing the shelves. For example, as early as the end of 2019, when the epidemic information just began to spread, social networks dedicated to public issues had already heated discussions, allowing us to quickly grasp the direction and make advance deployment. 
+In the face of global challenges, digital democracy has proven to be the most effective solution. The SMS-based contact tracing system is a great example.
 
-In the face of the ensuing challenges, digital democracy has been proven to be the most effective solution. The &quot;SMS system&quot; is a good example. 
+To eliminate community transmission, contact tracing must be done rapidly and effectively. Inaccurate information will put us in the dilemma of having to choose between protecting privacy and preventing the pandemic; rolling out a mandatory government app would only backfire. So instead of centralizing contact-tracing data or yielding control to multinational corporations, we sought social-sector solutions "with" the people.
 
-In order to prevent the path of large-scale community infection, the epidemic investigation must quickly and effectively grasp the footprint of the confirmed person. If reliable information is not provided for tracking, it will form a loophole in epidemic prevention, but this often conflicts with privacy . If the government mandates the use of certain mobile phone software, it may be counterproductive. Therefore, the &quot;real-linked system&quot; does not centrally manage data or hand it over to the control of multinational companies, but seeks solutions together with social departments. 
+Earlier this year, civic technologists in the g0v community invented a mechanism of contact tracing based on text messages; we worked across sectors with telecom carriers to deploy the “1922 SMS” contact tracing system in a week.
 
-In the middle of this year, friends from the Taiwanese citizen science and technology community g0v developed a mechanism to assist the epidemic through SMS; the government and the private sector worked together to develop and deploy the &quot;1922 SMS Real Linkage System&quot; within one week. . 
+By scanning a QR code with your phone’s built-in camera and sending a toll-free text message, people can keep track of their itineraries. This allows contact tracers to confirm the footprints of infected people and their contacts, without revealing any private information to venue owners.
 
-Anyone who scans the QR Code of the place and sends a text message to 1922 can save travel records so that the epidemic investigator can read the information from the system when necessary, and accurately compare the footprints of the confirmed person and the contact. No need to disclose any private information to the venue. 
+This collaboration cannot happen without strong trust across sectors. Of course, we need to bridge the digital gap for the elderly and visually impaired — so contact tracing can still be done through measures such as handwriting and stamping.
 
-Without a partnership of strong mutual trust, collaboration cannot be so smooth. Of course, we should still take care of the needs of the elderly and visually impaired friends; the original paper records, stamping instead of filling in, etc., are still tolerated and not contradictory. 
+When contact tracers apply for information about certain phone numbers, they submit requests through this platform to browse them. The phone number holder can then reverse-audit contact tracers’ requests and activities. All records are deleted after 28 days.
 
-An epidemic investigator applies to query a specific door number by applying for the track record of that door number through the epidemic investigation assistance platform. Door number holders can reverse query &quot;Which unit&#39;s epidemic investigation personnel and when did they check the mobile phone number&quot; on the SMS.1922 platform; after 28 days, all records will be deleted. 
+Because this civic tech originated from a community that has always valued personal data sovereignty, we can respond to new challenges with timely improvements. For instance, text messages sent to 1922 were discovered by a judge assessing a police search warrant. Fortunately, the multiparty design prevented the police from accessing the mapping between the random codes and specific venues.
 
-The newsletter system, which originated from the community, has always upheld the spirit of personal data autonomy, so we can respond in time when new challenges arise. For example, when a judge was reviewing a search ticket application filed by a police unit, he found that the documentary evidence contained a brief message of the actual joint system. Fortunately, the design of multi-party distributed storage prevents the police from obtaining the correspondence table of the SMS code and location. 
+The judge denied the warrant and publicly questioned the legality of wiretapping texts sent to 1922. Following discussions, the Ministry of Justice concluded that the 1922 SMS does not constitute communication under the Communication Security and Surveillance Act and, therefore, should not be repurposed for law enforcement, keeping the original civic intent intact.
 
-After the judge refused to sign the search ticket and publicly questioned its legitimacy, the Ministry of Justice immediately explained: The newsletter system is not within the scope of the &quot;Communication Security and Supervision Law&quot; to retrieve or monitor, so it should not be used for law enforcement Purpose to ensure the original intention of the civic community. 
+"Rule by the people" is the original intent of democracy. In the face of global threats such as the pandemic and disinformation, our Taiwan Model shows to the world this “people-public-private partnership” — with the people — can shape a digital democracy.
 
-&quot;Government by the People&quot; is the original meaning of democracy. Facing the harm of the global epidemic and false information, the Taiwan model shows the world how the partnership of &quot;citizens‧government‧private sector&quot; can shape digital democracy: by opening up people’s participation in public policies, civil society can quickly gather value and develop innovative solutions , Contribute to the world. 
+Trusting citizens to participate in policymaking can form shared goals, develop innovative solutions, and contribute to the world. Thank you.
 
 ---
 
-The concept of &quot;digital infrastructure&quot; is like reliable infrastructure such as water, electricity, and roads, which makes life convenient and secure. The digital infrastructure of citizens also makes democracy convenient and secure. 
+On the digital public infrastructures: Just like how reliable infrastructure makes our lives safer and more convenient, public infrastructure in the digital realm does the same for democracy.
 
-For example, the citizen science and technology community developed a low-cost micro-sensing device &quot;air box&quot; in 2015, which is now spread across schools and their own balconies. Citizen science not only complements the limited capacity of the government, it is also the best example of data literacy and environmental education. The following year, the Taiwanese government launched the &quot;People&#39;s Livelihood Public Internet of Things,&quot; and for the first time included numbers in the forward-looking infrastructure budget. From the first two thousand devices, there are now tens of thousands of devices. 
+As an example, in 2015, civic technologists invented Airbox, a low-cost air quality tracker. Airbox is now in a variety of places, from schools to household balconies. Citizen science supplemented the government’s limited capacity and exemplified data stewardship and environmental education. The following year, the government initiated the Civil IoT Taiwan program, the first time we classified infrastructure budget into the digital realm. Originally, there were 2,000 Airbox devices islandwide; now there are tens of thousands.
 
-After data sharing, how to build consensus with digital technology is also an important investment. For example, after Uber entered Taiwan in 2015, it was widely welcomed by passengers, but it also triggered a backlash from the taxi industry. With the help of the g0v community, the Taiwanese government used the open source software pol.is to invite stakeholders who care about this issue to focus on discussions. , And we have learned from this experience that seemingly divergent public issues often contain a lot of shared value. For example, &quot;safety&quot; is the common value of participants, and must have a professional driver&#39;s license, insurance and taxation, which is the basic consensus-these discussions are finally condensed into the 2016 &quot;Diversified Taxi Plan&quot;. 
+The next step after data sharing is forming shared goals through assistive intelligence. For instance, people largely welcomed Uber's entry to Taiwan in 2015, but it also triggered taxi driver discontent. With the assistance of the g0v community, the government utilized the pol.is system to invite stakeholders to exchange views, and we have learned that shared values are hiding in plain sight. For example, safety is a shared value on which all parties agree, and the rough consensus is that drivers need to have professional licenses, purchase insurance, and pay taxes -- all ratified in the Diversified Taxi Program of 2016.
 
- Cross-border discussions can also use the same way to collaborate. For example, last year, Taiwan and the United States’ &quot;Smart Coordination-Digital Dialogue&quot; and &quot;Taiwan-US Epidemic Prevention Pine Cohack&quot;, both use interactive digital tools &quot;Pol.is&quot;, Let participants see the relative position of their own thoughts and others in the visualized opinion spectrum, and then think about and co-create a &quot;good enough&quot; consensus. 
+The same idea can be applied to the discussion among countries. For instance, the AIT@40 Digital Dialogues in 2019 and the 2020 Cohack hackathon both used the Pol.is. With a visualized spectrum of opinion, participants can see where they stand compared with others. Thus, people can reflect and co-create a "good enough" consensus.
 
-Finally, the mechanism that allows social innovation to spread rapidly is an important democratic investment. Taiwan’s President’s Cup Hackathon has been held for four consecutive years. Every year, thousands of social entrepreneurs and grassroots civil servants participate in the competition and contribute to our public digital facilities. Each year, five outstanding teams are finally selected, awarded by the president, and supported in the next year. 
+Lastly, we need to institutionalize the rapid deployment of social innovations. Taiwan’s Presidential Hackathon has been held for four consecutive years. Each year, thousands of social entrepreneurs and public servants participate alongside teams from dozens of countries to contribute to our public digital infrastructure. Five teams each year receive this trophy, carrying the presidential promise of support in the next fiscal year.
 
-So, I want to use Taiwan’s experience to call on all free countries to invest in citizen technology to strengthen democracy. As we said in the state statement: &quot;There is not enough faith, but there is no faith.&quot; As a democratic country, we must trust our citizens—Taiwan can help. 
+To conclude, I urge all free countries to invest — like Taiwan does — in civic technologies to strengthen democracy. As I’ve said in our national statement: “To give no trust is to get no trust.” As democracies, we must trust our citizens — and #TaiwanCanHelp.
 
- <iframe width="560" height="315" src="https://www.youtube.com/embed/BkewUzZKanU" frameborder="0" allowfullscreen></iframe> 
+<iframe width="560" height="315" src="https://www.youtube.com/embed/BkewUzZKanU" frameborder="0" allowfullscreen></iframe> 
