* Katakana Middle Dot

--- a/_i18n/zh-TW/_posts/2021-12-10-民主峰會-以科技肯定民主價值.md
+++ b/_i18n/zh-TW/_posts/2021-12-10-民主峰會-以科技肯定民主價值.md
@@ -36,7 +36,7 @@ tags:
 
 在法官拒簽搜索票，並公開質疑其合法性後，法務部隨即作出解釋：簡訊實聯制不在《通訊保障及監察法》調取或監聽的範圍，因此不應該被用於執法目的，以確保公民社群的原意。
 
-「民治」是民主的原意。面對全球疫情與假訊息的危害，臺灣模式向世界展示「公民‧政府‧私部門」夥伴關係，如何形塑數位民主：開放民眾參與公共政策，公民社會便可以快速凝聚價值，進而開展創新解法，為全球貢獻心力。
+「民治」是民主的原意。面對全球疫情與假訊息的危害，臺灣模式向世界展示「公民・政府・私部門」夥伴關係，如何形塑數位民主：開放民眾參與公共政策，公民社會便可以快速凝聚價值，進而開展創新解法，為全球貢獻心力。
 
 ---
 
