--- a/_i18n/en/_posts/2021-12-10-民主峰會-以科技肯定民主價值.md
+++ b/_i18n/en/_posts/2021-12-10-民主峰會-以科技肯定民主價值.md
@@ -54,4 +54,4 @@ Lastly, we need to institutionalize the rapid deployment of social innovations. 
 
 To conclude, I urge all free countries to invest — like Taiwan does — in civic technologies to strengthen democracy. As I’ve said in our national statement: “To give no trust is to get no trust.” As democracies, we must trust our citizens — and #TaiwanCanHelp.
 
-<iframe width="560" height="315" src="https://www.youtube.com/embed/--kx8oGZY2I" frameborder="0" allowfullscreen></iframe> 
+<iframe width="560" height="315" src="https://www.youtube.com/embed/ou-B78UZu1U" frameborder="0" allowfullscreen></iframe> 
