--- a/_i18n/zh-TW/_posts/2021-12-01-數位民主在臺灣.md
+++ b/_i18n/zh-TW/_posts/2021-12-01-數位民主在臺灣.md
@@ -28,7 +28,7 @@ tags:
 
 臺灣的另一項民主創新是「公共政策網路參與平台」（join.gov.tw），這是一站式的參與平台，臺灣的民眾都能在這裡提出政策建言。只要超過 5,000 人附議，就能透過每月兩次的跨部會協作會議，探討如何將提案納入政策，確保每一個人都能協助制定議程並參與政府的決策程序。事實上，超過四分之一的提案是由不到 18 歲的青年朋友所提出，比如說限用塑膠吸管的提案人，當時年僅 17 歲。
 
-臺灣成功對抗 COVID-19 疫情，跨部門的夥伴關係也扮演了重要角色。2020 年初，臺灣口罩短缺，造成搶購，臺灣政府採取口罩實名制配額措施。然而，僅管採取配額措施，民眾不免仍需前往藥局採購，於是我們釋出應用程式介面（API），提供大眾特定位置的即時口罩存量。由社會企業家與 g0v 社群合作創造的口罩地圖應運而生，也就是各種互動式的地圖，告訴大眾哪裡還有口罩、數量又有多少。
+臺灣成功對抗 COVID-19 疫情，跨部門的夥伴關係也扮演了重要角色。2020 年初，臺灣口罩短缺，造成搶購，臺灣政府採取口罩實名制配額措施。然而，僅管採取配額措施，民眾不免仍需前往藥局採購，於是我們釋出應用程式介面（API），提供大眾特定位置的即時口罩存量。由社會創業家與 g0v 社群合作創造的口罩地圖應運而生，也就是各種互動式的地圖，告訴大眾哪裡還有口罩、數量又有多少。
 
 同樣的，早期在出入公共場所時紀錄聯絡資料的各種實聯措施，也促成了「1922 簡訊實聯制」在最短時間內開發佈署。這種直覺式、免下載 APP 的設計來自 g0v，可以輕鬆完成實聯登記，同時兼顧隱私－任何人只要輸入電話號碼，就可以查到過去 28 天是否曾被疫調人員查詢。
 
