--- a/_posts/2021-12-10-民主峰會-以科技肯定民主價值.md
+++ b/_posts/2021-12-10-民主峰會-以科技肯定民主價值.md
@@ -48,7 +48,7 @@ tags:
 
 跨國的討論也能運用同樣方式協作，例如去年臺美的「『智』同道合 – 數位對話」，以及「台美防疫松 cohack」，都使用互動式數位工具「Pol.is」，讓參與者在視覺化的意見光譜中，看見自己的想法與其他人的相對位置，進而思考和共創出一個「夠好」的共識。
 
-最後，讓社會創新能迅速擴散的機制，更是重要的民主投資。臺灣的總統盃黑客松已經連續舉辦四年，每一年，數以千計的社會企業家及基層公務員參賽，為我們的公共數位設施做出貢獻。每年最終會選出五個卓越團隊，由總統授獎，並在下個年度獲得支持。
+最後，讓社會創新能迅速擴散的機制，更是重要的民主投資。臺灣的總統盃黑客松已經連續舉辦四年，每一年，數以千計的社會創業家及基層公務員參賽，為我們的公共數位設施做出貢獻。每年最終會選出五個卓越團隊，由總統授獎，並在下個年度獲得支持。
 
 所以，我想以臺灣的經驗，呼籲所有的自由國家，投資公民科技以強化民主。正如我們在國家聲明中說的：「信不足焉，有不信焉。」作為民主國家，我們必須信任我們的公民 — 臺灣可以幫忙。
 
