--- a/_i18n/en/_posts/2021-12-10-民主峰會-以科技肯定民主價值.md
+++ b/_i18n/en/_posts/2021-12-10-民主峰會-以科技肯定民主價值.md
@@ -1,9 +1,9 @@
 ---
   layout: "post"
   title: "Summit for Democracy: Affirming Democratic Values with Technology
-  excerpt: "Not only need to \"be entrusted by the people,\" but also to \"work with the people.\""
+  excerpt: "We must work not just “for” the people, but “with” the people."
   image: "/assets/imgs/panel-20211210.jpg"
-  author: "Audrey Tang"
+  author: "Audrey Tang, Sheau-Tyng Peng, Wendy Hsueh"
   category: "blog"
   tags: 
     - "Open Government"
