--- a/_posts/2021-12-10-民主峰會-以科技肯定民主價值.md
+++ b/_posts/2021-12-10-民主峰會-以科技肯定民主價值.md
@@ -3,7 +3,7 @@ layout: post
 title: 民主峰會：以科技肯定民主價值
 excerpt: 不只要「為民所託」，更要「與民協力」。
 image: /assets/imgs/panel-20211210.jpg
-author: 唐鳳
+author: 唐鳳、彭筱婷、薛雅婷
 category: blog
 tags:
   - 開放政府
