--- a/_i18n/en/_posts/2021-12-10-民主峰會-以科技肯定民主價值.md
+++ b/_i18n/en/_posts/2021-12-10-民主峰會-以科技肯定民主價值.md
@@ -7,7 +7,7 @@
   category: "blog"
   tags: 
     - "Open Government"
-    - "Social Innovation""
+    - "Social Innovation"
 ---
 
 Every year, the human rights organization CIVICUS, with around 20 regional partners conduct research about freedom and civic space. Taiwan has been rated as “completely open” for three consecutive years. We are the only Asian country with that distinction, and the sole Asian green light on this year’s CIVICUS Monitor.
