--- a/_i18n/en/_posts/2021-12-10-民主峰會-國家聲明.md
+++ b/_i18n/en/_posts/2021-12-10-民主峰會-國家聲明.md
@@ -3,7 +3,7 @@
   title: "Summit for Democracy: National Statement"
   excerpt: "As democracies, we must trust our citizens and invest in public infrastructure in the digital realm."
   image: "/assets/imgs/statement-20211210.jpg"
-  author: "Audrey Tang"
+  author: "🇹🇼"
   category: "blog"
   tags: 
     - "Open Government"
