--- a/_posts/2021-12-10-民主峰會-國家聲明.md
+++ b/_posts/2021-12-10-民主峰會-國家聲明.md
@@ -3,7 +3,7 @@ layout: post
 title: 民主峰會：國家聲明
 excerpt: 我們民主國家，都必須信任我們的公民，並投資於數位領域的公民基礎設施。
 image: /assets/imgs/statement-20211210.jpg
-author: 唐鳳
+author: "🇹🇼"
 category: blog
 tags:
   - 開放政府
