set undecided copyright for now

--- a/_i18n/en/_posts/2021-12-10-民主峰會-國家聲明.md
+++ b/_i18n/en/_posts/2021-12-10-民主峰會-國家聲明.md
@@ -9,6 +9,7 @@
     - "Open Government"
     - "Social Innovation"
     - "Youth Engagement"
+  cc: copyright
 ---
 
 Ladies, gentlemen, and non-binary friends: Good local time.
