--- a/_i18n/en/_posts/2021-12-10-民主峰會-以科技肯定民主價值.md
+++ b/_i18n/en/_posts/2021-12-10-民主峰會-以科技肯定民主價值.md
@@ -46,7 +46,7 @@ As an example, in 2015, civic technologists invented Airbox, a low-cost air qual
 
 The next step after data sharing is forming shared goals through assistive intelligence. For instance, people largely welcomed Uber's entry to Taiwan in 2015, but it also triggered taxi driver discontent. With the assistance of the g0v community, the government utilized the pol.is system to invite stakeholders to exchange views, and we have learned that shared values are hiding in plain sight. For example, safety is a shared value on which all parties agree, and the rough consensus is that drivers need to have professional licenses, purchase insurance, and pay taxes -- all ratified in the Diversified Taxi Program of 2016.
 
-The same idea can be applied to the discussion among countries. For instance, the AIT@40 Digital Dialogues in 2019 and the 2020 Cohack hackathon both used the Pol.is. With a visualized spectrum of opinion, participants can see where they stand compared with others. Thus, people can reflect and co-create a "good enough" consensus.
+The same idea can be applied to the discussion among countries. For instance, the AIT@40 Digital Dialogues in 2019 and the 2020 Cohack hackathon both used the Pol.is system. With a visualized spectrum of opinion, participants can see where they stand compared with others. Thus, people can reflect and co-create a "good enough" consensus.
 
 Lastly, we need to institutionalize the rapid deployment of social innovations. Taiwan’s Presidential Hackathon has been held for four consecutive years. Each year, thousands of social entrepreneurs and public servants participate alongside teams from dozens of countries to contribute to our public digital infrastructure. Five teams each year receive this trophy, carrying the presidential promise of support in the next fiscal year.
 
