--- a/_posts/2022-01-04-大數據時代-該如何面對隱私權的挑戰.md
+++ b/_posts/2022-01-04-大數據時代-該如何面對隱私權的挑戰.md
@@ -1,7 +1,7 @@
 ---
 layout: post
 title: 大數據時代，該如何面對隱私權的挑戰
-excerpt: 提供範例以及具體友善的建議，進一步改善政府網站的體驗。
+excerpt: PETs 技術搭配完備的法制，共同持守數位時代的人權。
 image: /assets/imgs/analytics-g4b2d46737_1280.jpg
 author: 唐鳳、周詳
 category: blog
